[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "zeta-intersect-explorer"
version = "0.2.5"
description = "Tool for exploring Riemann zeta function zero intersections"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "mpmath",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/JDvorak1/Zeta-intersect-explorer"

[tool.setuptools]
py-modules = ["zetaExplorer"]
